# VeriStoreDB

./: CMakeLists.txt  README.md
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.h
src/db/: database.cpp  database.h
src/gitstore/: gitstore.cpp  gitstore.h
